# proximity-sort

./: Cargo.toml  README.md
.github/workflows/: check.yml
src/: main.rs
