[package]
name = "proximity-sort"
version = "1.2.0"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "Simple command-line utility for sorting inputs by proximity to a path argument"
repository = "https://github.com/jonhoo/proximity-sort.git"

keywords = ["cli", "pipe", "filter", "utility"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.1.4", features = ["derive", "wrap_help"] }
os_str_bytes = { version = "6.4", features = ["raw_os_str"], default-features = false }

[profile.release]
lto = "yes"
codegen-units = 1
